# pyclickup

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: requirements.txt
src/pyclickup/: __init__.py  list.py
src/pyclickup/custom_fields/: __init__.py  base.py  checkbox.py  currency.py  date.py  drop_down.py  email.py  formula.py  labels.py  location.py  number.py  phone.py  relation.py  short_text.py  text.py  url.py
src/pyclickup/services/: __init__.py  base.py  cache.py  clickup.py  geolocation.py
src/pyclickup/utils/: datastructures.py  date_format.py  decorators.py  types.py
src/pyclickup/utils/exceptions/: fields.py  geolocation.py  http.py  lists.py  tasks.py  validators.py
src/pyclickup/utils/validators/: __init__.py  base.py  checkbox.py  date.py  drop_down.py  email.py  labels.py  list_options.py  number.py  phone.py  relation.py  string.py  url.py  uuid.py
tests/: __init__.py  client_raw_task_1.json  conftest.py  test_custom_fields.py
tests/list/: conftest.py  test_default_fields.py  test_registry.py
tests/list/crud_events/: test_create.py  test_get.py  test_update.py
tests/services/: test_clickup_api_auth.py
tests/test_data/: client_raw_task_1.json  client_raw_task_2.json
