[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-clickup"
version = "1.0.3"
authors = [
  { name="Pavel Stashchenko", email="pavel.stashchenko@gmail.com" },
]
description = "Library that will give you the opportunity to manipulate your ClickUp data easier."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.28.1",
    "geopy==2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.1.2",
]

[project.urls]
"Homepage" = "https://github.com/Stashchen/pyclickup"
